navigation on small screen fix

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -46,12 +46,10 @@ header h1 {
 
 /* Navigation Styles */
 .navigation {
-    display: flex;
-    align-items: flex end;
+
     background-color: #1d4a4d;
     position: relative;
     width: 100%;
-    
     padding: 0;
 }
 
@@ -63,7 +61,7 @@ nav ul {
     background-color: #1d4a4d;
     position: absolute;
     width: 100%; /* Full width for mobile */
-    top: calc(100% = 10px); /*position below nav bar* */
+    top: calc(100% - 10px); /*position below nav bar* */
     z-index: 1000;
     right: 100px;  
     
@@ -108,14 +106,17 @@ nav a:hover {
 }
 
 
-nav ul.show {
+.menu.show {
     display: flex;
+
     flex-direction: column;
-    align-items: flex-start;    
+    
 }
 
  nav ul li {
     width: 100%;
+    margin: 0;
+    padding: 0;
  }
 
  /*Hero image not on smaller screen */
